--- a/ex1 - uso de iframe/index.html
+++ b/ex1 - uso de iframe/index.html
@@ -18,7 +18,7 @@
             </iframe>
 
             <!--
-                o uso do iframe faz com que apareça um quadro com o site que foi escolhido no iframe
+                o uso do iframe faz com que apareça um quadro com o site que foi escolhido na tag iframe
                 o iframe é um display inline
             -->
 
