--- a/ex1 - uso de iframe/index.html
+++ b/ex1 - uso de iframe/index.html
@@ -19,6 +19,7 @@
 
             <!--
                 o uso do iframe faz com que apareça um quadro com o site que foi escolhido na tag iframe
+                tambem chamados de quadros de linha
                 o iframe é um display inline
             -->
 
