--- a/ex3 - altura e largura do iframe/ajuste1.html
+++ b/ex3 - altura e largura do iframe/ajuste1.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         iframe{
-            height: 900px;
+            height: 700px;
             width: 700px;
         }
     </style>
@@ -17,7 +17,10 @@
         
     </iframe>
     
-    <!-- tamanho padrao do iframe é 300 x 150-->
+    <!--
+        tamanho padrao do iframe é 300 x 150
+        essa é a maneira de configurar a altura e largura
+    -->
 
 </body>
 </html>
