--- a/ex4 - navegacao com iframe/index.html
+++ b/ex4 - navegacao com iframe/index.html
@@ -17,6 +17,7 @@
         }
         iframe{
             width: 98vw;
+            height: 500px;
         }
     </style>
 </head>
@@ -29,12 +30,13 @@
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, qui totam rem laudantium fuga maxime voluptatum error quo, consequatur voluptatem veniam autem repellat aperiam ducimus officia, ipsum ad aspernatur eum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quidem voluptatem iure sit natus tempora corporis atque, est et impedit soluta mollitia minus odit, accusantium perspiciatis in id, provident quas. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel iusto minima soluta consequuntur commodi dolorem consequatur provident totam iste mollitia autem optio facilis, earum harum cumque voluptatum reiciendis. Vero, labore!</p>
 
-<iframe src="" frameborder="0" name="frame">
+<iframe src="" frameborder="0" name="frame" srcdoc="<img src=imagens/pc.jpg></iframe> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo inventore doloribus ipsa quod iure totam nisi qui architecto? Cumque doloribus quos hic, suscipit qui enim ipsa aut alias reprehenderit officiis!</p>">
 
 </iframe>
 
 <!--
     essa configuraçao faz com que o conteudo da pagina 1, 2 e 3 apareça dentro do quadro de iframe
+    tambem existe uma configuracao para aparecer um conteudo dentro do iframe quando é aberto do site, ou seja, um conteudo estatico, se usa o parametro srcdoc como no exemplo, esse parametro aceita linguagem html
 -->
     
 </body>
